--- a/html/Ex/05_1_ex1_formtag.html
+++ b/html/Ex/05_1_ex1_formtag.html
@@ -94,7 +94,7 @@
       <br />
 
       <label for="date">date :</label>
-      <input type="date" id="date" min="0" max="100" />
+      <input type="date" id="date" />
       <br />
 
       <label for="banana">바나나</label>
