--- a/css/Tng/07_99_tng3.html
+++ b/css/Tng/07_99_tng3.html
@@ -9,13 +9,15 @@
   <body>
     <div class="container">
       <div class="hd">
-        <!-- <h1>가정용 꿀사과</h1>
+        <h1>가정용 꿀사과</h1>
         <p>
           흠집이 있고 약간은 못생겼지만 맛과 영양은 그대로입니다.<br />
           질좋은 사과를 저렴하게 즐겨보세요
-        </p> -->
+        </p>
       </div>
+
       <br />
+
       <div class="mi">
         <div class="mi-top">
           <p>확인하세요</p>
