위치 및 반응형 태그

--- a/html/Tng/05_1_tag1_formtag.html
+++ b/html/Tng/05_1_tag1_formtag.html
@@ -9,9 +9,9 @@
         width: 400px;
         height: auto;
       }
-      /* .txta * {
+      .txta * {
         vertical-align: middle;
-      } */
+      }
     </style>
   </head>
   <body>
