--- a/javascript/Ex/39_DOM.html
+++ b/javascript/Ex/39_DOM.html
@@ -14,12 +14,12 @@
 
 	<input type="text" id="intxt" >
 
-	<ul>
+	<ul id="ul">
 		<li class="none-li">수박 게임</li>
 		<li class="none-li">지뢰 찾기</li>
 		<li class="none-li">테트리스</li>
 		<li>스페이스</li>
-		<li class="none-li">사과 게임</li>
+		<li id="apple" class="none-li">사과 게임</li>
 		<li class="none-li">체스</li>
 		<li class="none-li">고군분투</li>
 		<li class="none-li">죽림고수</li>
@@ -27,4 +27,4 @@
 	</ul>
 	<script src="../js/39.js"></script>
 </body>
-</html>
+</html> 
