--- a/javascript/Tng/40.html
+++ b/javascript/Tng/40.html
@@ -9,21 +9,19 @@
 			width: 300px;
 			height: 300px;
 			position: relative;
-			top: 600px;
-			left: 1200px;
 		}
 		
 		#interior {
-			width: 50px;
-			height: 50px;
+			width: 100px;
+			height: 100px;
 			position: absolute;
-			top: 125px;
-			left: 125px;
+			top: 100px;
+			left: 100px;
 		}
 	</style>
 </head>
 <body>
-	<button onclick="alert('안녕하세요. \n숨어있는 div를 찾아보세요');">버튼</button>
+	<button onclick="btn_ale()">버튼</button>
 
 	<div id="suburb">
 		<div id="interior">
